// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxFormCheck customize button=false 1`] = `
<div>
  <label
    class="form-check bazinga"
  >
    <span
      class="check-input secondary"
    >
      <input
        class=""
        id="id"
        type="radio"
      />
    </span>
    label
  </label>
</div>
`;

exports[`CxFormCheck customize button=true 1`] = `
<div>
  <label
    class="button button-check primary ghost large rounded bazinga"
  >
    <input
      class=""
      id="id"
      type="radio"
    />
    label
  </label>
</div>
`;

exports[`loads and displays CxFormCheck component 1`] = `
<div>
  <span
    class="check-input"
  >
    <input
      class=""
      data-react-aria-pressable="true"
      tabindex="0"
      type="checkbox"
    />
  </span>
</div>
`;
